fix: overflow in timeline and navbar link 'to' not found

--- a/public/src/student/status/status.css
+++ b/public/src/student/status/status.css
@@ -1,5 +1,4 @@
 .req-status {
-  overflow-x: scroll;
   text-align: center;
 }
 
@@ -28,4 +27,21 @@
 }
 .history {
   z-index: 100 !important;
+}
+
+.timeline-ovf {
+  overflow-x: auto;
+}
+
+.timeline-ovf::-webkit-scrollbar {
+  width: 1em; /* width of the entire scrollbar */
+}
+.timeline-ovf::-webkit-scrollbar-track {
+  background: gainsboro; /* color of the tracking area */
+}
+.timeline-ovf::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5); /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid transparent; /* creates padding around scroll thumb */
+  background-clip: content-box;
 }
